force-app/main/default/objects/Candidate__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>