force-app/main/default/objects/Candidate__c/fields/exp__c.field-meta.xml
<CustomField>
    <fullName>exp__c</fullName>
    <externalId>true</externalId>
    <label>Total Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>