force-app/main/default/objects/Candidate__c/fields/hInterviewerId__c.field-meta.xml
<CustomField>
    <fullName>hInterviewerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HRCandidates</relationshipName>
    <type>Lookup</type>
</CustomField>