force-app/main/default/objects/Candidate__c/fields/isofferreleased__c.field-meta.xml
<CustomField>
    <fullName>isofferreleased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released Offer</label>
    <type>Checkbox</type>
</CustomField>