force-app/main/default/objects/Candidate__c/fields/mInterviewerId__c.field-meta.xml
<CustomField>
    <fullName>mInterviewerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MRCandidates</relationshipName>
    <type>Lookup</type>
</CustomField>