force-app/main/default/objects/Candidate__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>