force-app/main/default/objects/Candidate__c/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <label>Skill-Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Automation Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>