force-app/main/default/objects/Candidate__c/fields/tInterviewerId__c.field-meta.xml
<CustomField>
    <fullName>tInterviewerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TRCandidates</relationshipName>
    <type>Lookup</type>
</CustomField>